k8s/shanghai/sh-prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisland-feed-prod
  namespace: shprod
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: wisland-feed-prod
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: wisland-feed-prod
        version: v1
    spec:
      imagePullSecrets:
        - name: registry-ali-hangzhou
        - name: registry-ali-sh-ee
      containers:
        - name: wisland-feed-prod-server
          image: >-
            atom-sh-registry-vpc.cn-shanghai.cr.aliyuncs.com/mxrag/wisland-feed-prod:server-20251021093417
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 15
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3500
            timeoutSeconds: 5
          ports:
            - containerPort: 3500
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3500
            timeoutSeconds: 3
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File

        - name: wisland-feed-prod-worker
          image: >-
            atom-sh-registry-vpc.cn-shanghai.cr.aliyuncs.com/mxrag/wisland-feed-prod:worker-20251021093417
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 2
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 100Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - wisland-feed-prod
              topologyKey: kubernetes.io/hostname
          - weight: 50
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - wisland-feed-prod
              topologyKey: topology.kubernetes.io/zone
